--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -7,12 +7,11 @@
     <parent>
         <groupId>com.demo</groupId>
         <artifactId>demo-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>0.0.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>agent</artifactId>
-    <version>1.0-SNAPSHOT</version>
 
     <dependencies>
         <!-- Add common dependencies if needed -->
