Added initial code for shell and also added a few test cases for concurrency

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <modules>
         <module>agent</module>
         <module>webapi</module>
+        <module>playground</module>
     </modules>
 
     <dependencyManagement>
