--- a/webapi/src/main/resources/application.properties
+++ b/webapi/src/main/resources/application.properties
@@ -7,3 +7,10 @@ debug=false
 
 # For actuator endpoints
 management.endpoints.web.exposure.include=*
+
+spring.kafka.bootstrap-servers=localhost:30093
+spring.kafka.consumer.group-id=my-group
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
