Initial setup to test behavior of java agent in console and web application. The same to be extended for batch processes as well in future. 1. Using sl4j (Simple logging for java) as the library of choice for loggin in console application. Added simplelogger.properties to configure the behavior of this logger library. 2. Initial code for agent. Changes in DummyAgent.java. 3. Modified agent's pom.xml file to create fat jar for the agent and also to create entries in manifest to specify the premain class. 4. Modified pom.xml of the playground console application to create a fat jar and also to specify the agent path.

--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,9 @@
 
     <modules>
         <module>agent</module>
-        <module>webapi</module>
+        <module>mylib</module>
         <module>playground</module>
+        <module>webapi</module>
     </modules>
 
     <dependencyManagement>
