--- a/webapi/src/main/resources/application.properties
+++ b/webapi/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.application.name=webapi
 greeting.message=Welcome to Spring Boot Application
 greeting.name=Akhilesh
 
+# Turn off the the banner that appers during application startup
+spring.main.banner-mode=off
+
 # Set the value to true to enable debug logging
 debug=false
 
@@ -14,3 +17,10 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+
+spring.datasource.generate-unique-name=false
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
