--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,20 @@
-target/
-**/.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-pom.xml.bak
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
+# Gradle
+.gradle/
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
 
-### STS ###
+# IntelliJ IDEA
+.idea/
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
+# Eclipse
 .apt_generated
 .classpath
 .factorypath
@@ -20,40 +22,35 @@ buildNumber.properties
 .settings
 .springBeans
 .sts4-cache
-
-### IntelliJ IDEA ###
-out/
-.idea/
-.idea_modules/
-*.iml
-*.ipr
-*.iws
-
-### Gradle
 bin/
-.gradle
-.gradletasknamecache
-gradle-app.setting
-!gradle-wrapper.jar
+!**/src/main/**/bin/
+!**/src/test/**/bin/
 
-### NetBeans ###
+# NetBeans
 /nbproject/private/
 /nbbuild/
 /dist/
 /nbdist/
 /.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
-nbactions.xml
-nb-configuration.xml
 
-### VS Code ###
+# VS Code
 .vscode/
-.code-workspace
 
-### OS X
+# Mac
 .DS_Store
 
-### Miscellaneous
+# Logs
 *.log
+
+# Maven (keeping for reference during migration)
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
