Added propetheus metrics exposition. Can be accessed at /actuator/prometheus

--- a/webapi/src/main/resources/application.properties
+++ b/webapi/src/main/resources/application.properties
@@ -10,14 +10,20 @@ debug=false
 
 # For actuator endpoints
 management.endpoints.web.exposure.include=*
+management.prometheus.metrics.export.enabled=true
 
-spring.kafka.bootstrap-servers=localhost:30093
-spring.kafka.consumer.group-id=my-group
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+# Enable metrics for common components
+management.metrics.enable.jvm=true
+management.metrics.enable.process=true
+management.metrics.enable.system=true
+management.metrics.enable.http=true
 
+#spring.kafka.bootstrap-servers=localhost:30093
+#spring.kafka.consumer.group-id=my-group
+#spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+#spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+#spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
 spring.datasource.generate-unique-name=false
 spring.datasource.url=jdbc:h2:mem:testdb
