--- a/webapi/build.gradle
+++ b/webapi/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     implementation "org.springframework.shell:spring-shell-starter:${springShellVersion}"
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
     implementation "org.jetbrains:annotations:${jetbrainsAnnotationsVersion}"
+    implementation "io.micrometer:micrometer-registry-prometheus:${micrometerVersion}"
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
