Adding data access sample code. Using spring-data-jpa

--- a/webapi/src/main/resources/application.properties
+++ b/webapi/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=webapi
 greeting.message=Welcome to Spring Boot Application
 greeting.name=Akhilesh
 
-# Turn off the the banner that appers during application startup
+# Turn off the banner that appers during application startup
 spring.main.banner-mode=off
 
 # Set the value to true to enable debug logging
@@ -25,8 +25,16 @@ management.metrics.enable.http=true
 #spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 #spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
-spring.datasource.generate-unique-name=false
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
+# Use in-memory H2 (keeps DB alive while JVM runs)
+spring.datasource.url=jdbc:h2:mem:webapi;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
+# Let Hibernate create/drop schema for tests/dev
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+
+# Optional: enable H2 console at /h2-console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
