--- a/webapi/build.gradle
+++ b/webapi/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot'
+    id 'org.springframework.boot' version "${springBootVersion}"
     id 'io.spring.dependency-management'
 }
 
@@ -10,7 +10,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-restclient'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation "org.springframework.kafka:spring-kafka:${springKafkaVersion}"
     implementation "org.springframework.shell:spring-shell-starter:${springShellVersion}"
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
@@ -19,6 +18,9 @@ dependencies {
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
+    implementation 'org.springframework.boot:spring-boot-h2console'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    //implementation "org.hibernate:hibernate-entitymanager"
     runtimeOnly 'com.h2database:h2'
 
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
