Added data persistence

--- a/webapi/src/main/resources/application.properties
+++ b/webapi/src/main/resources/application.properties
@@ -31,9 +31,13 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-# Let Hibernate create/drop schema for tests/dev
+# Let Hibernate manage schema for development
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
+# Hibernate / JPA properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false
 
 # Optional: enable H2 console at /h2-console
 spring.h2.console.enabled=true
