--- a/webapi/build.gradle
+++ b/webapi/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-h2console'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    //implementation "org.hibernate:hibernate-entitymanager"
+//    implementation 'org.hibernate:hibernate-core:7.1.11.Final'
     runtimeOnly 'com.h2database:h2'
 
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
