--- a/webapi/src/main/resources/application.properties
+++ b/webapi/src/main/resources/application.properties
@@ -18,6 +18,21 @@ management.metrics.enable.process=true
 management.metrics.enable.system=true
 management.metrics.enable.http=true
 
+# Enable observability
+management.observations.key-values.application=${spring.application.name:webapi}
+
+# OTLP Metrics Export - CORRECT property names for Spring Boot
+management.metrics.export.otlp.enabled=true
+management.metrics.export.otlp.url=${OTEL_EXPORTER_OTLP_ENDPOINT:http://localhost:4318}/v1/metrics
+management.metrics.export.otlp.step=10s
+
+# Tracing - handled by OpenTelemetry Java Agent via environment variables
+# No Spring Boot configuration needed for tracing when using Java Agent
+
+# Debug logging
+logging.level.io.micrometer.registry.otlp=DEBUG
+logging.level.io.micrometer.core.instrument.push=DEBUG
+
 #spring.kafka.bootstrap-servers=localhost:30093
 #spring.kafka.consumer.group-id=my-group
 #spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
@@ -26,7 +41,7 @@ management.metrics.enable.http=true
 #spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
 # Use in-memory H2 (keeps DB alive while JVM runs)
-spring.datasource.url=jdbc:h2:mem:webapi;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:mem:webapi;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=TRUE
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
