--- a/k8s/kafka-ui.yaml
+++ b/k8s/kafka-ui.yaml
@@ -22,19 +22,19 @@ spec:
             - name: KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS
               value: "kafka:9092"
           ports:
-            - containerPort: 8080
+            - containerPort: 8085
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: kafka-ui
+  name: kafka-ui-service
   namespace: k8slab-ns
 spec:
   selector:
     app: kafka-ui
   ports:
     - protocol: TCP
-      port: 8080
-      targetPort: 8080
+      port: 8085
+      targetPort: 8085
   type: ClusterIP
 
