--- a/k8s/webapi-configmap.yaml
+++ b/k8s/webapi-configmap.yaml
@@ -26,8 +26,8 @@ data:
         verbosity: detailed
       prometheus:
         endpoint: "0.0.0.0:8889"
-      otlp/jaeger:
-        endpoint: "jaeger-service:4317"
+      otlp/tempo:
+        endpoint: "tempo-service:4317"
         tls:
           insecure: true
 
@@ -36,7 +36,7 @@ data:
         traces:
           receivers: [otlp]
           processors: [memory_limiter, batch]
-          exporters: [otlp/jaeger, debug]
+          exporters: [otlp/tempo, debug]
         metrics:
           receivers: [otlp]
           processors: [memory_limiter, batch]
