--- a/k8s/kafka-ui.yaml
+++ b/k8s/kafka-ui.yaml
@@ -22,7 +22,7 @@ spec:
             - name: KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS
               value: "kafka:9092"
           ports:
-            - containerPort: 8085
+            - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
@@ -30,11 +30,10 @@ metadata:
   name: kafka-ui-service
   namespace: k8slab-ns
 spec:
+  type: LoadBalancer
   selector:
     app: kafka-ui
   ports:
-    - protocol: TCP
-      port: 8085
-      targetPort: 8085
-  type: ClusterIP
+    - port: 8095
+      targetPort: 8080
 
